# C-

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Head/C1/: ArrCnt.h  ArrayCount.h  Factorial.h  OwnStrLen.h  StrLen.h  Swap.h
Head/C2/: ArrPtr.h  ArrayCopy.h  DynArr.h
Head/C3/: ElementCounter.h  Rectangle.h  Struct.h
Head/Class/: StackT.h  StrackT.h
Head/ExectFunction/: ExecutionFunction.h
Head/ExectFunction/SideMethods/: Case1.h  Case4.h  Case5.h  Case7.h  Case9.h
Methods/C1/: ArrayCount.h  Factorial.h  OwnStrLen.h  Swap.h
Methods/C2/: ArrayCopy.h  DynamicArray.h  PointerArray.h
Methods/C3/: ElementCounter.h  Struct.h
Methods/C4/: ExceptionStak.h  Stack.h  SwapT&.h
Methods/C5/: WordRepeat.h  vector-map-set.h
Service/: stack_input.h  touppercase.h
